[package]
name = "rodash"
version = "0.1.1"
edition = "2021"
authors = ["zignis <zignis@icloud.com>"]
license = "MIT"
description = "Performant general-purpose utility functions"
keywords = ["utility", "lodash"]
documentation = "https://docs.rs/rodash"
homepage = "https://github.com/zignis/rodash"
repository = "https://github.com/zignis/rodash"

[dependencies]
num = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.4"
rand = "0.9.0-alpha.1"
